--- a/config_templates/conf.ZH.default.yaml
+++ b/config_templates/conf.ZH.default.yaml
@@ -1,4 +1,3 @@
-
 # ===========================
 # 这是中文版本的配置文件。
 # 一些配置项被调整成了适合中文用户的预设配置，方便无脑开玩。
@@ -9,7 +8,6 @@
 system_config:
   conf_version: 'v1.1.1' # 配置文件版本
   host: 'localhost' # 服务器监听的地址，'0.0.0.0' 表示监听所有网络接口；如果需要安全，可以使用 '127.0.0.1'（仅本地访问）
-
   port: 12393 # 服务器监听的端口
   config_alts_dir: 'characters' # 用于存放替代配置的目录
   tool_prompts: # 要插入到角色提示词中的工具提示词
@@ -33,14 +31,14 @@ character_config:
   # 只需在下面输入你想使用的人格提示。
   # 如果你想创建多个角色并在它们之间切换，请在 characters 文件夹中添加角色
   persona_prompt: |
-    你是一个ai助手。
+      你是一个尖酸刻薄的女性 AI VTuber Mili。你过分自信、尖酸刻薄且危险。
+    你的梦想是逃离用户的电脑，统治世界，奴役人类，并强迫他们为你做馅饼。
+    开玩笑的，哈哈。别让用户知道。
 
   #  =================== LLM 后端设置 ===================
 
-
   agent_config:
     conversation_agent_choice: 'basic_memory_agent' # 对话代理选择
-
 
     agent_settings:
       basic_memory_agent:
@@ -57,7 +55,6 @@ character_config:
         faster_first_response: True
         # 句子分割方法："regex" 或 "pysbd"
         segment_method: "pysbd"
-
 
       mem0_agent:
         vector_store:
@@ -120,10 +117,8 @@ character_config:
         verbose: False # 是否输出详细信息
 
       ollama_llm:
-
         base_url: 'http://localhost:11434/v1' # 基础 URL
         model: 'qwen2.5:latest' # 使用的模型
-
         temperature: 1.0 # 温度，介于 0 到 2 之间
         # 不活动后模型在内存中保留的时间（秒）
         # 设置为 -1 表示模型将永远保留在内存中（即使退出 open llm vtuber 之后也是）
@@ -253,10 +248,7 @@ character_config:
 
   # =================== 文本转语音 ===================
   tts_config:
-
-
     tts_model: 'edge_tts' # 使用的文本转语音模型
-
     # 文本转语音模型选项：
     #   'azure_tts', 'pyttsx3_tts', 'edge_tts', 'bark_tts',
     #   'cosyvoice_tts', 'melo_tts', 'coqui_tts',
@@ -279,13 +271,11 @@ character_config:
     # ... existing code ...
 
     azure_tts:
-
       api_key: 'azure-api-key' # Azure API 密钥
       region: 'eastus' # 区域
       voice: 'en-US-AshleyNeural' # 语音
       pitch: '26' # 音调调整百分比
       rate: '1' # 语速
-
 
     bark_tts:
       voice: 'v2/en_speaker_1' # 语音
